<resources>

    <string name="app_name">OvS Controller</string>

    <string name="bottom_home_item">Acceuil</string>
    <string name="bottom_history_item">Historique</string>
    <string name="bottom_stat_item">Statistiques</string>
    <string name="bottom_param_item">Paramétre</string>

    <!-- Page d'authentification -->
    <string name="auth_page_title">Bienvenue</string>
    <string name="auth_page_forget_pass"><u>Mot de Passe outblié?</u></string>
    <string name="auth_page_email">Email :</string>
    <string name="auth_page_password">Mot de Passe :</string>
    <string name="auth_page_connect_btn">Se connecter</string>
    <string name="auth_page_create_acc_btn">Créer un compte</string>

    <!-- Page creation de compte -->
    <string name="creation_page_title">Créer un compte</string>
    <string name="creation_page_desc">L\'aventure de la gestion de votre budget commence maintenant. Remplissez les informations ci-dessous :</string>
    <string name="creation_page_condition">J\'accepte les conditions d\'utilisation</string>
    <string name="creation_page_create_btn">Créer mon compte</string>
    <string name="creation_page_acc_exist">Vous avez déja un compte ? <u>Connectez-vous</u></string>

    <!-- formulaire  d'authentifiacation / cration du compte -->
    <string name="form_cell_firstname">Prénom</string>
    <string name="form_cell_familyname">Nom</string>
    <string name="form_cell_email">Entrer votre email</string>
    <string name="form_cell_password">Mot de passe</string>
    <string name="form_cell_passconfirm">Confirmer le mot de passe</string>


    <string name="settings_page_title">Paramètres</string>
    <string name="settings_page_budget_field">Budget mensuel</string>
    <string name="settings_page_device">Devise</string>
    <string name="settings_page_gerer_button">Gérer les catégories personnalisées</string>
    <string name="settings_page_notification">Notifications</string>
    <string name="settings_page_signout_button">Déconnexion</string>
    <string name="settings_page_save_button">Exporter les données</string>

    <string-array name="device">
        <item>EUR (€)</item>
        <item>USD ($)</item>
        <item>GBP (£)</item>
    </string-array>

    <!--main page-->
    <string name="main_page_title">Solde actuel</string>
    <string name="main_page_button1">Ajouter un dépense</string>
    <string name="main_page_button2">Ajouter un revenu</string>
    <string name="main_page_subtitle_1">Transactions récentes</string>


    <string-array name="expense_categories">
        <item>Alimentation</item>
        <item>Bar</item>
        <item>Restaurant</item>
        <item>Virement</item>
        <item>Transport</item>
        <item>Shopping</item>
        <item>Loisirs</item>
        <item>Santé</item>
        <item>Factures</item>
        <item>Autres</item>
    </string-array>


    <string-array name="income_categories">
        <item>Salaire</item>
        <item>Prime</item>
        <item>Virement Reçu</item>
        <item>Remboursement</item>
        <item>Allocation</item>
        <item>Freelance</item>
        <item>Investissement</item>
        <item>Vente</item>
        <item>Autres</item>
    </string-array>
    <string-array name="categories">
        <item>Alimentation</item>
        <item>Bar</item>
        <item>Restaurant</item>
        <item>Virement</item>
        <item>Transport</item>
        <item>Shopping</item>
        <item>Loisirs</item>
        <item>Santé</item>
        <item>Factures</item>
        <item>Salaire</item>
        <item>Prime</item>
        <item>Virement Reçu</item>
        <item>Remboursement</item>
        <item>Allocation</item>
        <item>Freelance</item>
        <item>Investissement</item>
        <item>Vente</item>
    </string-array>
</resources>

