<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="100dp"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp">

    <ImageView
        android:layout_width="110dp"
        android:layout_height="97dp"
        android:layout_gravity="center"
        android:src="@drawable/logo" />
    <TextView
        android:id="@+id/pagetitle"
        style="@style/TitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_page_title"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auth_page_email"
        style="@style/DefaultTextStyle"/>

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/form_cell_email"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edit_text_border_selector"
        android:padding="12dp"
        style="@style/FormTextStyle"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auth_page_password"
        style="@style/DefaultTextStyle"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/form_cell_password"
        android:inputType="textPassword"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edit_text_border_selector"
        android:padding="12dp"

        style="@style/FormTextStyle"/>


    <Button
        android:id="@+id/signinButton"
        style="@style/DefaultTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:text="@string/auth_page_connect_btn"
        android:textColor="@color/white"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/signupButton"
        style="@style/DefaultTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="@string/auth_page_create_acc_btn"
        android:textColor="@color/blue" />

    <TextView
        android:id="@+id/textView6"
        style="@style/DefaultTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="end"
        android:text="@string/auth_page_forget_pass"
        android:textColor="@color/blue" />

    <LinearLayout
        android:id="@+id/orDividerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/signinButton">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:layout_marginEnd="16dp"
            android:background="@color/black"
            />

        <TextView
            android:id="@+id/orText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ou"
            style="@style/DefaultTextStyle"
            android:textSize="14sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:background="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <ImageButton
            android:id="@+id/googleSignInButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="fitCenter"
            android:background="@color/white"
            android:src="@drawable/iconlogog"
            />

    </LinearLayout>

</LinearLayout>