<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF">

    <!-- Frame: Titre avec solde -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="183dp"
        android:background="@color/blue"
        android:padding="30dp"
        >

        <TextView
            android:id="@+id/solde_actuel"
            style="@style/FormTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|start"
            android:layout_marginTop="25dp"
            android:text="@string/main_page_title"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/solde_montant"
            style="@style/TitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:text="2 450,75 €"
            android:textColor="#FFFFFF"
            android:textSize="32sp" />
    </FrameLayout>

    <!-- Frame: Boutons Ajouter une dépense/revenu -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp">

        <Button
            android:id="@+id/ajouter_depense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:text="@string/main_page_button1"
            android:textColor="@color/white"
            android:background="@drawable/custom_red_button_background"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            />

        <View
            android:layout_width="16dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/ajouter_revenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:background="@drawable/custom_green_button_background"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:text="@string/main_page_button2"
            android:textColor="@color/white"

            />
    </LinearLayout>

    <!-- Frame: Liste des transactions -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/titre_transactions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_page_subtitle_1"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingBottom="8dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/transaction_container"
            android:padding="16dp">
            <!--android:layout_height="374dp"-->

            <LinearLayout
                android:id="@+id/transaction_items_depense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/empty_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=" "
                    android:textSize="16sp"
                    android:gravity="center"
                    android:padding="8dp" />

            </LinearLayout>

        </ScrollView>
    </LinearLayout>



</LinearLayout>